A module whose javac args carry --add-exports or --add-reads of a system module compiles with -source and -target at its java level instead of --release, which javac refuses beside such an export, so Hadoop's annotations reach jdk.javadoc.internal.tool the way the Maven compiler plugin lets them