@@ -121,6 +121,12 @@ args    = ["-XDcompilePolicy=simple", "--should-stop=ifError=FLOW"]
 The table is named `javac`, not `java`: `java = 25` is the release, and a TOML key cannot be
 both a value and a table.
 
+`java = N` reaches javac as `--release N`. javac refuses that flag beside an `--add-exports` or
+`--add-reads` of a system module (`java.*`, `jdk.*`), so a module whose `args` export one —
+Hadoop's annotations reach `jdk.javadoc.internal.tool` — compiles with `-source N -target N`
+against the running JDK's API instead, as Maven does for a POM that writes `<source>`/`<target>`;
+the class-file level is the same either way.
+
 `compile-main` and `compile-test` run the same plugins, and every plugin and option is part
 of the compile action key — bumping a severity recompiles. A `[javac.test]` table with the
 same two keys replaces `[javac]` for `compile-test` alone; an empty one (`plugins = {}`) turns
